# efrei-2022-st2-tst-prj

./: README.md
backend/: README.md  pyproject.toml
backend/app/: settings.py
backend/hr/: components.py  models.py  urls.py  views.py
backend/hr/components/: address.html  basic_info.html  legal.html
backend/hr/migrations/: 0001_initial.py  0002_auto_20211229_1636.py  0003_auto_20220102_1745.py
backend/static/: style.css
backend/templates/hr/: add_employee.html  add_team.html  add_to_team.html  address.html  base.html  basic.html  delete_employee.html  delete_team.html  employee.html  employees.html  index.html  legal.html  members.html  promote.html  reset_db.html  teams.html
