[tool.isort]
profile = "black"

[tool.poetry]
name = "hr-db"
version = "0.0.1"
description = "HR DB"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = ""


[tool.poetry.dependencies]
python = "^3.7"

django = "^3.2.10"
django-browser-reload = "^1.0.0"
django-cors-headers = "^3.10.1"
django-mustache = "^1.1.2"
python-dotenv = "^0.19.2"
gunicorn = "^20.1"
django-components = "^0.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
